--- a/EECIP/Views/Account/UserProfile.cshtml
+++ b/EECIP/Views/Account/UserProfile.cshtml
@@ -216,11 +216,11 @@
     <script type="text/javascript">
         Chaperone.init({
             "api_key": "lBuTEvIH43bg5g",
-            "trigger": {
-                "element": "#btnTour",
-                "event": "click",
-                "tutorial": 4072
-            }
+            //"trigger": {
+            //    "element": "#btnTour",
+            //    "event": "click",
+            //    "tutorial": 4072
+            //}
         });
     </script>
 
