--- a/EECIP/Views/Dashboard/Agency.cshtml
+++ b/EECIP/Views/Dashboard/Agency.cshtml
@@ -346,11 +346,11 @@
     <script  type="text/javascript">
         Chaperone.init({
             "api_key": "lBuTEvIH43bg5g",
-            "trigger": {
-                "element": "#btnTour",
-                "event": "click",
-                "tutorial": 4073
-            }
+            //"trigger": {
+            //    "element": "#btnTour",
+            //    "event": "click",
+            //    "tutorial": 4073
+            //}
         });
     </script>
 
