--- a/EECIP/Views/Dashboard/Governance.cshtml
+++ b/EECIP/Views/Dashboard/Governance.cshtml
@@ -205,11 +205,11 @@ else
     <script type="text/javascript">
         Chaperone.init({
             "api_key": "lBuTEvIH43bg5g",
-            "trigger": {
-                "element": "#btnTour",
-                "event": "click",
-                "tutorial": 4074
-            }
+            //"trigger": {
+            //    "element": "#btnTour",
+            //    "event": "click",
+            //    "tutorial": 4074
+            //}
         });
     </script>
 }
