--- a/EECIP/Views/Dashboard/UserCard.cshtml
+++ b/EECIP/Views/Dashboard/UserCard.cshtml
@@ -101,8 +101,8 @@
 </div>
 
 
-<div class="row">
+@*<div class="row">
     <div class="col-sm-12">
         <h4>Latest Activity</h4>
     </div>
-</div>
+</div>*@
