--- a/EECIP/Views/Forum/Index.cshtml
+++ b/EECIP/Views/Forum/Index.cshtml
@@ -11,3 +11,15 @@
     @Html.Partial("_CommonSideNav")
     @*@RenderSection("side", false)*@
 </div>
+
+<script src="https://cdn.getchaperone.com/embed/chaperone.js"></script>
+<script type="text/javascript">
+        Chaperone.init({
+            "api_key": "lBuTEvIH43bg5g",
+            //"trigger": {
+            //    "element": "#btnTour",
+            //    "event": "click",
+            //    "tutorial": 4074
+            //}
+        });
+</script>
