--- a/EECIP/Views/Shared/_Layout.cshtml
+++ b/EECIP/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
                 <a class="navbar-brand" href='@(Request.IsAuthenticated ? "/Dashboard" : "/Home")'>
                     <img src="~/Content/Images/seal.png" style="width:30px; float:left; padding-right:10px;" />
                     <span class="visible-xs visible-sm">EECIP</span>
-                    <span class="hidden-xs hidden-sm">E-Enterprise Community Inventory Platform</span>
+                    <span class="hidden-xs hidden-sm">E-Enterprise Community Inventory Platform (EECIP)</span>
                 </a>
             </div>
             <!-- start: XS MENU TOGGLER -->
