--- a/EECIP/Views/Shared/_LeftMenu.cshtml
+++ b/EECIP/Views/Shared/_LeftMenu.cshtml
@@ -139,8 +139,8 @@
 
     </ul>
     <!-- end: MAIN NAVIGATION MENU -->
-    @if (ViewBag.ShowTour == true)
+    @*@if (ViewBag.ShowTour == true)
     {
         <button id="btnTour" class="btn btn-info" style="position: fixed; left: 20px; bottom: 50px;     font-size: 18px; color: #fff; background-color:rgb(25, 156, 152)"><i class="clip-question-2"></i> Find help here</button>
-    }
+    }*@
     </div>
