--- a/EECIP/Views/Shared/_PartialHeadNotification.cshtml
+++ b/EECIP/Views/Shared/_PartialHeadNotification.cshtml
@@ -16,7 +16,7 @@
         </a>
         <ul class="dropdown-menu notifications">
             <li>
-                <span class="dropdown-menu-title"> You have @Model.NotifyCount unreead notifications</span>
+                <span class="dropdown-menu-title"> You have @Model.NotifyCount unread notifications</span>
             </li>
             <li>
                 <div class="drop-down-wrapper ps-container ps-theme-default ps-active-y" data-ps-id="78c70b6f-7c32-7407-aae8-406f18a26cd2">
