--- a/EECIP/Views/Dashboard/ProjectCard.cshtml
+++ b/EECIP/Views/Dashboard/ProjectCard.cshtml
@@ -1,4 +1,5 @@
-﻿@model EECIP.Models.vmDashboardProjectCard
+﻿@using EECIP.App_Logic.BusinessLogicLayer
+@model EECIP.Models.vmDashboardProjectCard
 @{
     ViewBag.Title = Model.project.PROJ_NAME;
     ViewBag.SubTitle = Model.OrgName;
@@ -112,7 +113,7 @@
 
 
 <div class="row">
-    <section class="col-sm-9">
+    <section class="col-sm-6">
         <section class="panel panel-default">
             <div class="panel-heading">
                 Project Description
@@ -140,6 +141,78 @@
             </div>
             <div class="panel-body">
                 @Model.project.PROJECT_CONTACT
+
+                @if (Model.project.PROJECT_CONTACT_IDX != null && Model.ProjectContact != null)
+                {
+                    <div class="col-lg-12">
+                        <div class="circle-tile">
+                            <a href="@Url.Action("UserCard", "Dashboard", new { strid = Model.project.PROJECT_CONTACT_IDX })">
+                                <div class="circle-tile-heading" style="background-image:url(/Content/Images/Users/@(Model.project.PROJECT_CONTACT_IDX).png)">
+                                </div>
+                            </a>
+                            <div class="circle-tile-content dark-blue">
+                                <div class="circle-tile-number text-faded">
+                                    @(Model.ProjectContact.FNAME) @(Model.ProjectContact.LNAME)
+                                </div>
+                                <div class="circle-tile-title text-faded">
+                                    @(Model.ProjectContact.JOB_TITLE)
+                                </div>
+                                <div class="circle-tile-buttons text-faded">
+                                    <a href="tel:@(Model.ProjectContact.PHONE)" class="btn btn-primary">
+                                        <i class="clip-phone"></i>
+                                    </a>
+                                    <a href="mailto:@(Model.ProjectContact.EMAIL)" class="btn btn-primary">
+                                        <i class="glyphicon glyphicon-envelope"></i>
+                                    </a>
+                                    <a href="https://www.linkedin.com/in/@(Model.ProjectContact.LINKEDIN)" class="btn btn-primary" target="_blank">
+                                        <i class="clip-linkedin"></i>
+                                    </a>
+                                </div>
+                                <a href="@Url.Action("UserCard", "Dashboard", new { strid = Model.project.PROJECT_CONTACT_IDX })" class="circle-tile-footer">More Info <i class="fa fa-chevron-circle-right"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                }
+            </div>
+        </section>
+    </section>
+
+
+    <section class="col-sm-3">
+        <section class="panel panel-default">
+            <div class="panel-heading">
+                Project Files
+                <div class="panel-tools">
+                    <a class="btn btn-xs panel-collapse collapses" href="#">
+                    </a>
+                </div>
+            </div>
+            <div class="panel-body">
+                @if (Model.files_existing != null && Model.files_existing.Count > 0)
+                {
+                    <div class="postuploadedfilesholder clearfix">
+                        <p>Attached Files</p>
+                        <ul>
+                            @foreach (var file in Model.files_existing.OrderByDescending(o => o.CREATE_DT))
+                            {
+                                <li>
+                                    <a class="fileupload" href="@Url.Action("ProjectFileDownload", "Dashboard", new { id = file.DOC_IDX })">
+                                    @if (Utils.FileIsImage(file.DOC_NAME))
+                                    {
+                                        <span class="glyphicon glyphicon-picture" aria-hidden="true"></span>
+                                    }
+                                    else
+                                    {
+                                        <span class="glyphicon glyphicon-file" aria-hidden="true"></span>
+                                    }
+                                    </a>
+                                    <div class="postedfilename">@file.DOC_NAME</div>
+                                </li>
+                            }
+                        </ul>
+                    </div>
+                }
+
             </div>
         </section>
     </section>
@@ -173,6 +246,7 @@
                     </dt>
                     <dd>
                         @Model.project.COTS
+                        @Model.project.VENDOR
                     </dd>
                     <dt style="width:30%">
                         Business Process Modernization:
