--- a/EECIP/Views/Shared/_LeftMenu.cshtml
+++ b/EECIP/Views/Shared/_LeftMenu.cshtml
@@ -90,6 +90,12 @@
                                     <span class="title">Agencies List </span>
                                 </a>
                             </li>
+                            <li class="lvl3 @Html.ActivePage("Admin", "RefGovernanceAgencies")">
+                                <a href="@Url.Action("RefGovernanceAgencies","Admin")">
+                                    <span class="title">Governance Groups</span>
+                                </a>
+                            </li>
+                            
                             <li class="lvl3 @Html.ActivePage("Admin", "RefEntServices")">
                                 <a href="@Url.Action("RefEntServices","Admin")">
                                     <span class="title">Enterprise Services </span>
