--- a/EECIP/Views/Dashboard/Projects.cshtml
+++ b/EECIP/Views/Dashboard/Projects.cshtml
@@ -8,21 +8,21 @@
     <div class="col-md-1">
         <a href="@Url.Action("ProjectDetails", "Dashboard", new { orgIDX = Model.selAgency, returnURL="Projects"  })" class="btn btn-rounded  btn-rounded btn-success"><i class="glyphicon glyphicon-plus"></i> Add New</a>
     </div>
-@if (User.IsInRole("Admins"))
-{  
-    <div class="col-sm-11">
-        <form class="form-horizontal">
-            <div class="form-group">
-                <label class="col-sm-3 control-label">
-                    Select Agency:
-                </label>
-                <div class="col-sm-5">
-                    @Html.DropDownListFor(model => model.selAgency, Model.ddl_Agencies, "", new { @class = "form-control", @onchange = "document.location.href = '/Dashboard/Projects?selAgency=' + this.options[this.selectedIndex].value;" })
+    @if (User.IsInRole("Admins"))
+    {
+        <div class="col-sm-11">
+            <form class="form-horizontal">
+                <div class="form-group">
+                    <label class="col-sm-3 control-label">
+                        Select Agency:
+                    </label>
+                    <div class="col-sm-5">
+                        @Html.DropDownListFor(model => model.selAgency, Model.ddl_Agencies, "", new { @class = "form-control", @onchange = "document.location.href = '/Dashboard/Projects?selAgency=' + this.options[this.selectedIndex].value;" })
+                    </div>
                 </div>
-            </div>
-        </form>
-    </div>
-}
+            </form>
+        </div>
+    }
 </div>
 <div class="row">
     <div class="col-sm-12">
@@ -35,10 +35,11 @@
                 </div>
             </div>
             <div class="panel-body">
-                <div class="table-responsive"  style="max-height:700px;">
+                <div class="table-responsive" style="max-height:700px;">
                     <table class="table table-striped m-b-none" data-ride="datatables">
                         <tr>
                             <th></th>
+                            <th>Delete<input type="checkbox" id="checkAll" /></th>
                             <th>Project Name</th>
                             <th>Description</th>
                             <th>Media</th>
@@ -48,17 +49,20 @@
                             <th>Program Area</th>
                             <th>Tags</th>
                             <th>More Info</th>
-                        </tr>
 
+                        </tr>
                         @foreach (var item in Model.projects)
                         {
                             <tr>
                                 <td style="min-width: 68px;">
-                                    <a href="@Url.Action("ProjectDetails","Dashboard", new { id=item.PROJECT_IDX, orgIDX = Model.selAgency, returnURL="Projects" })" class="btn btn-rounded btn-xs btn-info"><i class="glyphicon glyphicon-pencil"></i></a>
-                                    <div class="delete-section" style="display:inline">
-                                        <a class=" btn btn-rounded btn-xs btn-danger delete-link"><i class="glyphicon glyphicon-remove"></i></a>
-                                        <div class="btn btn-rounded btn-xs btn-warning delete-confirm" style="display:none" data-delete-id="@item.PROJECT_IDX" data-delete-p="/Dashboard/ProjectsDelete"><b>Confirm Delete</b></div>
-                                    </div>
+                                    <a href="@Url.Action("ProjectDetails", "Dashboard", new { id = item.PROJECT_IDX, orgIDX = Model.selAgency, returnURL = "Projects" })" class="btn btn-rounded btn-xs btn-info"><i class="glyphicon glyphicon-pencil"></i></a>
+                                    @*<div class="delete-section" style="display:inline">
+                                            <a class=" btn btn-rounded btn-xs btn-danger delete-link"><i class="glyphicon glyphicon-remove"></i></a>
+                                            <div class="btn btn-rounded btn-xs btn-warning delete-confirm" style="display:none" data-delete-id="@item.PROJECT_IDX" data-delete-p="/Dashboard/ProjectsDelete"><b>Confirm Delete</b></div>
+                                        </div>*@
+                                </td>
+                                <td>
+                                    <input type="checkbox" name="RecordDeletebyId" class="checkBox" value="@item.PROJECT_IDX" />
                                 </td>
                                 <td>
                                     @Html.DisplayFor(modelItem => item.PROJ_NAME)
@@ -102,17 +106,76 @@
                                         <a href="@Html.DisplayFor(modelItem => item.PROJECT_URL)" target="_blank">Project URL</a>
                                     }
                                 </td>
+
                             </tr>
                         }
                     </table>
+
+                    <div class="delete-section" style="display:inline">
+                        <a class="btn btn-danger" id="delete">Delete Selected Records</a>
+                       @* <div class="btn btn-rounded btn-xs btn-warning delete-confirm" style="display:none"  data-delete-p="/Dashboard/ProjectsDeleteBlank" id="delete"><b>Confirm Delete</b></div>*@
+                    </div>
                 </div>
+
+
             </div>
         </section>
     </div>
 </div>
 
-
-
 @section Scripts {
     @Scripts.Render("~/bundles/confirmdelete")
+    <script type="text/javascript">
+        $(document).ready(function () {
+
+            $("#checkAll").click(function () {
+                $(".checkBox").prop('checked',
+                    $(this).prop('checked'));
+            });
+        });
+
+        $("#delete").click(function () {
+            
+            var selectedIDs = new Array();
+            $('input:checkbox.checkBox').each(function () {
+                if ($(this).prop('checked')) {
+                    selectedIDs.push($(this).val());
+                }
+            });
+            if (selectedIDs.length > 0) {
+                if (confirm("Confirm Delete")) {
+                    var options = {};
+                    options.url = "/Dashboard/ProjectsDelete";
+                    options.type = "POST";
+                    options.data = JSON.stringify(selectedIDs);
+                    options.contentType = "application/json";
+                    options.dataType = "json";
+                    options.success = function (msg)
+                    {
+                        location.reload(true);
+                        if (msg == "Success") {
+                            toastr.success(msg);
+                        }
+
+                        if (msg == "Unable to delete project.") {
+                            toastr.warning(msg);
+                        }
+                        if (msg == "No record selected to delete") {
+                            toastr.warning(msg);
+                        }
+                    };
+                    options.error = function () {
+                        // alert("Error while deleting the records!");
+
+                    };
+                    $.ajax(options);
+                }
+            }
+            else
+            {
+                alert("Please select a project to delete");
+            }
+
+        });
+    </script>
 }
