--- a/EECIP/Views/Dashboard/UserCard.cshtml
+++ b/EECIP/Views/Dashboard/UserCard.cshtml
@@ -51,7 +51,6 @@
                 </div>
             </div>
             <div class="panel-body">
-
                 @foreach (var item in Model.SelectedExpertise)
                 {
                     <span class="select2-selection__choice">@Html.DisplayFor(modelItem => item)</span>
@@ -66,6 +65,8 @@
             </div>
         </section>
     </div>
+    @if(!Model.User.EXCLUDE_POINTS_IND)
+    {
     <div class="col-lg-4">
         <section class="panel panel-default" style="margin-top: 40px;">
             <div class="panel-heading">
@@ -76,7 +77,6 @@
                 </div>
             </div>
             <div class="panel-body">
-
                 <div class="badgeholder">
                     <div class="publicbadgeline" style="width:100%">
                         @foreach (UserBadgeDisplay item in Model.UserBadges)
@@ -89,15 +89,13 @@
                         }
                     </div>
 
-
                 </div>
-
-
 
 
             </div>
         </section>
     </div>
+    }
 </div>
 
 
