--- a/EECIP/Views/Account/UserProfile.cshtml
+++ b/EECIP/Views/Account/UserProfile.cshtml
@@ -72,9 +72,9 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     @if (Model.uListInd != "a")
-                    {
-                        <a class=" btn btn-orange " href="@Url.Action("SetPermPassword")">Change Password</a>
-    }
+                                    {
+                                        <a class=" btn btn-orange " href="@Url.Action("SetPermPassword")">Change Password</a>
+                                    }
                                 </div>
                             </div>
                         </div>
@@ -86,13 +86,13 @@
                                 </div>
                                 <div id="imgPreview" class="thumbnail" style="@(Model.HasAvatar==true ? "" : "display:none")">
                                     @if (Model.HasAvatar == true)
-                    {
-                        <img class="img-responsive" id="targetImg" src="~/Content/Images/Users/@(Model.UserIDX).png?r=@Model.ImageUniqueStr" />
-    }
-    else
-    {
-                <img class="img-responsive" id="targetImg" src="" />
-}
+                                    {
+                                        <img class="img-responsive" id="targetImg" src="~/Content/Images/Users/@(Model.UserIDX).png?r=@Model.ImageUniqueStr" />
+                                    }
+                                    else
+                                    {
+                                        <img class="img-responsive" id="targetImg" src="" />
+                                    }
                                     <div class="caption" style="@(Model.HasAvatar!=true ? "" : "display:none")">
                                         <a href="#" onclick="ClearPreview()"><i class="glyphicon glyphicon-trash"></i></a>
                                         <span id="description"></span>
@@ -105,20 +105,20 @@
                         @if (User.IsInRole("Admins"))
                         {
 
-                <div class="col-md-3">
-                    <div class="form-group">
-                        <label for="form-field-select-4">User is Active?</label>
-                        @Html.CheckBox("ActInd", Model.ActInd, new { @class = "checkbox" })
-                    </div>
-                </div>
+                            <div class="col-md-3">
+                                <div class="form-group">
+                                    <label for="form-field-select-4">User is Active?</label>
+                                    @Html.CheckBox("ActInd", Model.ActInd, new { @class = "checkbox" })
+                                </div>
+                            </div>
                         }
                         else
                         {
-                @Html.HiddenFor(model => model.ActInd)
+                            @Html.HiddenFor(model => model.ActInd)
                         }
                         <div class="col-md-9">
                             <div class="form-group">
-                                <label for="form-field-select-4">Excluded from points/badges</label>
+                                <label for="form-field-select-4">Exclude from points/badges</label>
                                 @Html.CheckBox("ExcludeBadges", Model.ExcludeBadges, new { @class = "checkbox" })
                             </div>
                         </div>
@@ -144,14 +144,14 @@
                             <div class="form-group">
                                 <label>Agency</label>
                                 @if (Model.uListInd == "a")
-            {
-                    @Html.DropDownListFor(model => model.OrgIDX, Model.ddl_Agencies, "-Please Select-", new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.FName)
-}
-else
-{
-                    @Html.TextBoxFor(model => model.OrgName, new { @class = "form-control", @readonly = true })
-}
+                                {
+                                    @Html.DropDownListFor(model => model.OrgIDX, Model.ddl_Agencies, "-Please Select-", new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(model => model.FName)
+                                }
+                                else
+                                {
+                                    @Html.TextBoxFor(model => model.OrgName, new { @class = "form-control", @readonly = true })
+                                }
                             </div>
                         </div>
                         <div class="col-md-6">
@@ -171,15 +171,15 @@ else
                         </div>
                         <div class="col-md-12">
                             @if (Model.SelectedExpertise == null || Model.SelectedExpertise.Count == 0)
-        {
-                    <div class="alert alert-block alert-danger fade in">
-                        <button data-dismiss="alert" class="close" type="button">×</button>
-                        <h4 class="alert-heading"><i class="fa fa-times-circle"></i> Share your interests!</h4>
-                        <p>
-                            By specifying your expertise and interests, content in EECIP can be tailored to your specified interests, and others know who to contact with questions or project ideas.
-                        </p>
-                    </div>
-}
+                            {
+                                <div class="alert alert-block alert-danger fade in">
+                                    <button data-dismiss="alert" class="close" type="button">×</button>
+                                    <h4 class="alert-heading"><i class="fa fa-times-circle"></i> Share your interests!</h4>
+                                    <p>
+                                        By specifying your expertise and interests, content in EECIP can be tailored to your specified interests, and others know who to contact with questions or project ideas.
+                                    </p>
+                                </div>
+                            }
                             <div class="form-group">
                                 <label for="form-field-select-4">Expertise and/or Interests</label>
                                 @Html.ListBoxFor(model => model.SelectedExpertise, Model.AllExpertise, new { multiple = "multiple", @id = "form-field-select-4", @class = "form-control search-select" })
@@ -191,7 +191,7 @@ else
                                 @Html.CheckBox("NodeAdmin", Model.NodeAdmin ?? false, new { @class = "checkbox" })
                             </div>
                         </div>
-                       
+
                     </div>
                 </div>
             </section>
